<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_preview_match"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.camera.view.PreviewView>

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_preview_wrap"
        android:layout_width="1080px"
        android:layout_height="1440px"
        android:background="#00000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/box_label_canvas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#66000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/inference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="12dp"
            android:text="inference time: "
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Precision"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/model"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/model"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="6dp"
            android:background="#00000000"
            android:entries="@array/model"
            android:gravity="right"
            android:padding="0dp"
            app:layout_constraintBottom_toTopOf="@+id/immersive"
            app:layout_constraintStart_toEndOf="@+id/model_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/inference_time"
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="12dp"
            android:text="@string/size"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/inference" />

        <TextView
            android:id="@+id/frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="5dp"
            android:text="Frame size: "
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@id/inference"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/frame_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="6dp"
            android:text="heigth x width"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@id/inference_time"
            app:layout_constraintStart_toEndOf="@+id/frame" />


        <TextView
            android:id="@+id/immersive_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="6dp"
            android:text="immersive: "
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@id/frame"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Switch
            android:id="@+id/immersive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="2dp"
            android:padding="2dp"
            android:textOff="off"
            android:textOn="on"
            app:layout_constraintBottom_toTopOf="@id/frame_size"
            app:layout_constraintStart_toEndOf="@+id/immersive_name"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/model_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="6dp"
            android:text="@string/Model"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@id/immersive_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/parametros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="100"
            android:progress="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/precisionB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="6dp"
            android:text="@string/PrecisionB"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/immersive"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <SeekBar
            android:id="@+id/seekBar3"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="5dp"
            android:max="100"
            android:progress="10"
            app:layout_constraintEnd_toEndOf="@+id/seekBar2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/precisionB"
            app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

        <Switch
            android:id="@+id/verZona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/ViewZone"
            android:textOff="off"
            android:textOn="on"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/frame_size"
            app:layout_constraintTop_toBottomOf="@+id/seekBar3" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Kp"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/inference_time"
            app:layout_constraintTop_toBottomOf="@+id/verZona" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:max="100"
            android:progress="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/verZona" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>